# llm-reward-humanoid-rl

./: .gitignore  README.md
isaac-track/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt
isaac-track/config/: run_config.g6.bedrock.yaml  run_config.g6.v2.yaml  run_config.g6.yaml  run_config.yaml
isaac-track/infra/: README.md  app.py  cdk.json  humanoid_gpu_stack.py  requirements.txt  user_data.sh
isaac-track/prompts/: analyze_failure.txt  initial_reward.txt  refine_reward.txt
isaac-track/scripts/: bedrock_invoke_policy.json  cache_image_to_s3.sh  download_and_sync.sh  launch_vllm.sh  probe_qwen_capability.py  record_demo.py  rerender_cameras.sh  restore_and_launch.sh  restore_image_from_s3.sh  run_docker_build.sh  run_eval.py  run_full_training.sh  run_full_training_chunked.sh  run_iteration.py  run_stage_a.sh  run_stage_c.sh  run_stage_c_pinned.sh  run_stage_c_video.sh  run_validate_recorder.sh  save_caches.sh  seed-s3-policy.json  seed_userdata.sh  smoke_test_env.py  smoke_test_vllm.py  stage_a_check.py  test_bedrock.py  validate_recorder.py  verify_security_posture.py  verify_weights.py
isaac-track/src/: blog.py  config.py  data_models.py  exceptions.py  orchestrator.py  run_loop.py  sim_app.py
mujoco-track/: PROJECT-PLAN.md  README.md  pyproject.toml
mujoco-track/config/: run_config.yaml  run_config_6gpu_v2.yaml  run_config_6gpu_v3_bedrock.yaml  run_config_6gpu_v4_warmstart.yaml
mujoco-track/docs/: RESEARCH-SUMMARY.md  backup-and-restore.md  lesson-fall-termination-needs-alive-dominant-reward.md  lesson-goal-change-and-retraining.md  lesson-gpu-architecture-purpose-fit.md  lesson-mjx-b200-bringup.md  lesson-problems-and-resolutions.md  lesson-run-v4-findings-and-next-run-plan.md  multi-gpu-run-recipe.md
mujoco-track/infra/: instance-role-policy.json
mujoco-track/prompts/: analyze_failure.txt  initial_reward.txt  refine_reward.txt
mujoco-track/scripts/: b200_setup_mjx.sh  backup_to_s3.sh  diag_train.py  launch_ab.sh  monitor_runs.sh  probe_h1_env.py  render_best_policy.py  restore_from_s3.sh  smoke_test_eval.py  smoke_test_goal_env.py  smoke_test_mjx.py  smoke_test_multigpu.py  smoke_test_render.py  smoke_test_reward.py  smoke_test_train.py  ssm_push.sh  ssm_run.sh
mujoco-track/src/: __init__.py  blog.py  capture.py  config.py  data_models.py  exceptions.py  (+2 more)
(+37 files in other folders)
